[tool.poetry]
name = "makebio"
version = "0.1.1"
description = "Quickly manage your research projects"
authors = ["Vivek Rai <vivekrai@umich.edu>"]

[tool.poetry.dependencies]
python = "^3.7"
click = "^7.0"
toml = "^0.10.0"

[tool.poetry.dev-dependencies]
pytest = "^4.6"

[tool.poetry.scripts]
makebio = 'makebio.cli:cli'

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
